--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.6.5",
+    "element-china-area-data": "^5.0.2",
+    "element-plus": "^1.0.2-beta.35",
+    "elui-china-area-dht": "^1.0.4",
+    "js-cookie": "^2.2.1",
     "vue": "^3.0.0",
+    "vue-area-linkage": "^5.1.0",
+    "vue-axios": "^3.2.4",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
